# FavoritePokemon

./: download.py  index.html  pyproject.toml  script.js
css/: style.css
