[tool.poetry]
name = "favoritepokemon"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
ipython = "^7.8"
beautifulsoup4 = "^4.8"
requests = "^2.22"
ipdb = "^0.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
